Playing around with layouts. Twitter button now aligns correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@
 	padding-top: 2%;
 }
 #tweet-tweet {
-	margin-left: auto;
-	margin-right: auto;
-
+	float: center;
 }
 .centered {
 	text-align: center;
